--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,8 @@ h2 {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	border-top: 3px solid;
-	border-bottom: 2px solid;
+	border-bottom-width: 0;
+	border-bottom-style: solid;
 }
 
 /*---- Intro Image -----------------------------------------*/
@@ -30,12 +31,13 @@ h2 {
 	padding: 0;
 }
 #intro-image .page-header {
-	margin: 58px auto 0 auto;
+	margin: 58px 0 0 0;
 	width: 100%;
 	height: 429px;
 	padding: 0;
 	min-height: 100%;
 	background: url(../img/intro-image.jpg) no-repeat center;
+	background-color: #000;
 }
 .not-my-body {
 	min-width: 240px;
@@ -53,6 +55,7 @@ h2 {
 	margin: 0 15px; /*top-down left-right*/
 }
 .navbar-default {
+	border-top: 1px solid;
 	border-bottom: 1px solid;
 	text-transform: uppercase;
 	font-family: Montserrat, Arial, sans-serif;
@@ -60,6 +63,7 @@ h2 {
 	min-width: 111px;
 }
 .navbar-header {
+	margin-top: 3px;
 	float: left;
 }
 /*brand styling*/
@@ -89,13 +93,13 @@ h2 {
 		width:auto;
 	}
 }
-@media (max-width: 300px) {
+@media (max-width: 330px) {
 	.navbar-default .navbar-brand {
 		padding: 8px; 
-		font-size: 13px;
+		font-size: 12px;
 	}
 }
-@media (max-width: 263px) {
+@media (max-width: 280px) {
 	.navbar-default .navbar-brand .title {
 		display: none;
 	}
@@ -388,7 +392,7 @@ figure {
 .box .time span:last-child {
 	border: 1px solid;
 	border-radius: 10%;
-  top:95%;
+  top: 100%;
   left: -90px;
   padding: 3px;
 }
